Load and init display and shader