@@ -5,22 +5,42 @@ plugins {
 	id("io.freefair.lombok") version "9.1.0"
 }
 
+project.group = "com.shiftingdawn"
+project.ext.lwjglNatives = "natives-linux"
+
 dependencies {
 	implementation libs.log4j
 	implementation libs.jspecify
 	implementation libs.fastutil
 	implementation libs.gson
+	implementation libs.joml
+	implementation platform(libs.lwjgl)
+
+	implementation "org.lwjgl:lwjgl"
+	implementation "org.lwjgl:lwjgl-glfw"
+	implementation "org.lwjgl:lwjgl-openal"
+	implementation "org.lwjgl:lwjgl-opengl"
+	implementation "org.lwjgl:lwjgl-stb"
+	implementation "org.lwjgl:lwjgl::$lwjglNatives"
+	implementation "org.lwjgl:lwjgl-glfw::$lwjglNatives"
+	implementation "org.lwjgl:lwjgl-openal::$lwjglNatives"
+	implementation "org.lwjgl:lwjgl-opengl::$lwjglNatives"
+	implementation "org.lwjgl:lwjgl-stb::$lwjglNatives"
 }
 
 repositories {
 	mavenCentral()
+	maven { url "https://central.sonatype.com/repository/maven-snapshots" }
 }
 
 application {
 	mainClass = "Main"
 
 	applicationDefaultJvmArgs = [
-		"-Ddawn.workspace.root=$rootDir/run"
+		"--enable-native-access=ALL-UNNAMED",
+		"-Ddawn.workspace.root=$rootDir/run",
+		"-Dorg.lwjgl.util.Debug=true",
+		"-Dorg.lwjgl.util.DebugLoader=true"
 	]
 }
 
